<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/include"
        layout="@layout/base_activity" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/blueText"
            style="@style/user_inverse_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="44.0dp"
            android:text="@string/aboutText" />

        <ImageButton
            android:id="@+id/saveLover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="44.0dp"
            android:layout_toLeftOf="@id/blueText"
	        android:background="@drawable/m_bar_save_story"
            android:contentDescription="@string/blueDescription" />

        <TextView
            android:id="@+id/name"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveLover"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nickname"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveLover"
            android:layout_toRightOf="@id/name"
            android:text="@string/nickname" />

        <TextView
            android:id="@+id/birthday"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname"
            android:text="@string/birthday" />

        <TextView
            android:id="@+id/date"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname"
            android:layout_toRightOf="@id/birthday" />

        <TextView
            android:id="@+id/constellationNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date"
            android:text="@string/sagittarius"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/description"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:text="@string/description" />

        <TextView
            android:id="@+id/editdescription"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_toRightOf="@id/description"
            android:text="@string/editdescriptionError" />

        <TextView
            android:id="@+id/phone"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/editphone"
            style="@style/user_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_toRightOf="@id/phone"
            android:text="@string/editphoneError" />

        <ImageButton
            android:id="@+id/constellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editphone"
	        android:background="@drawable/m_bar_cal"
            android:contentDescription="@string/constellation" />

        <ImageButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editphone"
	        android:background="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/favorite" />

        <ImageButton
            android:id="@+id/experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:background="@drawable/m_bar_passing"
            android:layout_alignParentRight="true"
            android:layout_below="@id/editphone"
            android:contentDescription="@string/experience" />
    </RelativeLayout>

	<LinearLayout
            android:id="@+id/AdLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
        	android:layout_alignParentTop="true"/>
</RelativeLayout>