<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcomLove"
    android:background="@drawable/cover"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <ImageView android:id="@+id/blue"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cover"
        android:contentDescription="@string/blueDescription"/>
    
    <TextView android:id="@+id/blueText"
        style="@style/note_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/toolsText"/>


    <ImageButton
        android:id="@+id/sendMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/blue"
        android:background="@drawable/m_bar_add_story"
        android:contentDescription="@string/enterClock" />

</RelativeLayout>
